Bug 157363 - Pasting hyperlink from PowerPoint to Impress does not work
Summary: Pasting hyperlink from PowerPoint to Impress does not work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0
Keywords:
: 157361 (view as bug list)
Depends on:
Blocks: Paste-From-MSO
  Show dependency treegraph
 
Reported: 2023-09-21 11:31 UTC by Gabor Kelemen (Collabora)
Modified: 2024-02-02 15:58 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from PP (30.25 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-09-21 11:31 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the error (85.29 KB, image/png)
2023-09-21 11:32 UTC, Gabor Kelemen (Collabora)
Details
PP and Impress in current nightly after paste (48.23 KB, image/png)
2023-11-16 16:59 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-09-21 11:31:15 UTC
Created attachment 189736 [details]
Example file from PP

When copying text that contains a hyperlink from PowerPoint to Impress, only the text is copied and not the link target.

1. Open attached file in PowerPoint
2. Copy the text from either textbox
3. Paste it in an empty Impress document.
-> The link text is copied, but it's not linked anymore.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: beaea2e992912b4747d790070b26371f557b1f57
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

Seems to work like this since 3.3
Comment 1 Gabor Kelemen (Collabora) 2023-09-21 11:32:08 UTC
Created attachment 189737 [details]
Screenshot of the error
Comment 2 Stéphane Guillou (stragu) 2023-10-18 13:17:19 UTC
Reproduced with MS Office build 2309 (build 16.0.16827.20166) and LO 7.6.2.1.
Comment 3 Oliver Specht (CIB) 2023-10-30 08:13:04 UTC
The URL is missing because PowerPoint doesn't paste the link into the RTF part of the clipboard. It is just a text.


"...{\b\f1\cf1\lang1033 a }{\b\ul\f1\cf1\lang1033 Bugzilla}{\b\f1\cf1\lang1033  }{\b\f1\cf1\lang1033 b}..."

But it adds HTML to the clipbard but Impress does not support HTML here.
The same applies to text boxes in calc and writer.
Comment 4 Commit Notification 2023-11-10 08:53:02 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/87be89ac27023f48f68a873b37df31aa0453d6fa

tdf#157363 add HTML format when pasting into draw text

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-11-13 12:17:55 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5ed0646dffab1563337ef4c1ae34a4ebfa69bdbe

tdf#157363 remove pre text when pasting simple HTML

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Gabor Kelemen (Collabora) 2023-11-16 16:59:09 UTC Comment hidden (obsolete)
Comment 7 Commit Notification 2023-11-24 14:56:25 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/418af212a7f506784d88f5a7a7800140f4f9dd30

tdf#157363 remove HTML prefix always

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Gabor Kelemen (Collabora) 2023-11-24 16:45:36 UTC
There was a bit of misunderstanding, documented in bug 158294. With that being solved, the paste from PP to Impress both works and is easily discoverable in the Paste dropdown buttons menu.
Comment 9 Gabor Kelemen (Collabora) 2023-11-24 16:47:03 UTC
*** Bug 157361 has been marked as a duplicate of this bug. ***