tdf#157363 remove pre text when pasting simple HTML

appends to https://gerrit.libreoffice.org/c/core/+/158659
handling of pre text didn't make it into sd code

Change-Id: Ie396b487f451e163b9e59b585c988f9b1b5b669e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159361
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>